Fix: numbers overflowing out of display box

--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ body {
     font-size: 32px;
     display: flex;
     align-items: center;
+    overflow: hidden;
 }
 
 .input-area {
